tests/src/frontend/syntax/invalid/did_you_mean_case.sk
class A{pOS: String}

fun f(a: A): String {
  a.pos
}
